src/components/MealComponent/MealComponent.module.scss
.MealComponent {
  padding: 20px 5px 5px 5px;
  margin-bottom: 5px;

  .mealHeader {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-between;

    h3 {
      color: #fc4a1a;
      font-weight: bold;
      margin: 0px 10px 5px 10px;
    }
  }

  hr {
    width: 98%;
  }

  ul {
    padding-left: 10px;
    padding-right: 10px;
    width: 100%;
    margin-bottom: 0px;

    li {
      display: flex;
      flex-direction: row;
      width: 100%;
      margin: 20px 0px 10px 0px;
      justify-content: space-between;
      font-weight: 300;

      .foodDesc {
        text-align: left;
      }
      .foodCal {
        text-align: right;
      }
    }

    .recommendedCal {
      height: 50px;
      padding: 30px 20px;
      text-align: center;
      color: rgba($color: #000000, $alpha: 0.5);
    }
  }
}

